--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     }
 
     .container {
-      max-width: 400px;
+      width: 400px;
+      height: 410px;
       padding: 20px;
       background-color: #f5f5f5;
       border-radius: 8px;
