--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     input[type="number"] {
       width: 100%;
       padding: 8px;
+      padding-inline: initial;
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
