--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       margin-bottom: 5px;
     }
 
+    input#oppervlak {
+      padding-left: 5px;
+    }
+
     select,
     input[type="number"] {
       width: 100%;
